Fix breadcrumb being shown on mobile

--- a/react/global.css
+++ b/react/global.css
@@ -151,10 +151,6 @@ body.vtex-filter-popup-open {
       "gallery gallery gallery";
   }
 
-  .vtex-search-result__breadcrumb {
-    justify-self: center;
-  }
-
   .vtex-search-result__total-products {
     justify-self: stretch;
     text-align: center;
